# python-project-49

./: .gitignore  Makefile  Makefile.save  README.md  pyproject.toml
brain_games/: brain_even_cli.py  choose_even.py  cli.py  engine.py  engine.yes  game_calc.py  game_core.py  game_even.py  game_gcd.py  game_progression.py  math_func.py  output_func.py  print_func.py  start.py  storage.py
brain_games/games/: calculator.py  choose_even.py  even.py  game_calc.py  game_even.py  game_nod.py  game_prime.py  game_progression.py  nod.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
