[tool.poetry]
name = "hexlet-code"
version = "0.1.1"
description = ""
authors = ["kustikov <pasha_k1987@mail.ru>"]
readme = "README.md"
packages = [
	{include = "brain_games"},
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"
flake8 = { version = "^6.0.0", python = "^3.8.1" }

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
