[tool.poetry]
name = "hexlet-code"
version = "1.0.0"
description = "collection of games for terminal"
authors = ["Kustikov Pavel <pasha_k1987@mail.ru>"]
repository = "https://github.com/Kustikov/python-project-49"
readme = "README.md"
packages = [
	{include = "brain_games"},
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"
flake8 = { version = "^5.0.4", python = "^3.8.1" }

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
